--- a/test/fixtures/invites.yml
+++ b/test/fixtures/invites.yml
@@ -1,7 +1,9 @@
-# Read about fixtures at http://ar.rubyonrails.org/classes/Fixtures.html
-
-# one:
-#   column: value
-#
-# two:
-#   column: value
+dominiek:
+  id: 1
+  email: info@dominiek.com
+  code: 915536f4dd86d38a6334fd95e0845752
+  used_for_stream: dominiek
+  is_used: true
+peter:
+  id: 2
+  email: peter@reccoon.com
